feat: diferenciando a função de Edit/Create e adicionando confirmação para o delete

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <span class="modal-close" id="modalClose">&#10006;</span>
                 </header>
                 <form id="form" class="modal-form">
-                    <input type="text" class="modal-field" id="nomeCliente" placeholder="Nome do Cliente" required>
+                    <input type="text" class="modal-field" data-index="new" id="nomeCliente" placeholder="Nome do Cliente" required>
                     <input type="email" class="modal-field" id="emailCliente" placeholder="e-mail do Cliente" required>
                     <input type="text" class="modal-field" id="celularCliente" placeholder="Celular do Cliente" required> 
                     <input type="text" class="modal-field" id="cidadeCliente" placeholder="Cidade do Cliente" required>
